@@ -351,3 +351,6 @@
                              being chosen as random hops.
                            Have stats on intermediate vs. final hop count
                              (closes: #649900).
+                           Handle a pool we cannot read correctly: don't close
+                             the NULL dir handle (segfaults on *bsd). We also
+                             print a warning in that case now.
